- Reordered navigation - Used EnumRenderer for displaying StudyYears - Fixed several constants display errors - Fixed / changed / added several names / translations - Fixed display of RoleAssignmentView

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1,11 +1,11 @@
 add = Hinzuf\u00FCgen
 addAnswer = Antwort hinzuf\u00FCgen
 addClinic = Klinik hinzuf\u00FCgen
-addDoctor = Dozent hinzuf\u00FCgen
+addDoctor = Examinator hinzuf\u00FCgen
 addLangSkill = Sprachkenntnis hinzuf\u00FCgen
 addLanguage = Sprache hinzuf\u00FCgen
 addNationality = Nationalit\u00E4t hinzuf\u00FCgen
-addPatient = SimPat hinzuf\u00FCgen
+addPatient = SP hinzuf\u00FCgen
 addProfession = Beruf hinzuf\u00FCgen
 addRoom = Raum hinzuf\u00FCgen
 addTitle = Titel hinzuf\u00FCgen
@@ -35,7 +35,7 @@ comparison = Vergleich
 complexity = Komplexit\u00E4t
 country = Land
 createClinic = Klinik erstellen
-createDoctor = Dozent erstellen
+createDoctor = Examinator erstellen
 criterion = Kriterium
 dateTime = Datum/Uhrzeit
 dateTimeFormat = dd. MMMM yyyy
@@ -45,8 +45,8 @@ details = Einzelheiten
 edit = Bearbeiten
 editAnamnesisValue = Detail zur Person bearbeiten
 editClinic = Spital bearbeiten
-editDoctor = Dozent bearbeiten
-editPatient = SimPat bearbeiten
+editDoctor = Examinator bearbeiten
+editPatient = SP bearbeiten
 email = Email
 enterAnswer = Bitte Antwort eingeben...
 enterQuestion = Bitte Frage eingeben...
@@ -82,9 +82,9 @@ noTitle = Frage geh\u00F6rt zu keinem Titel
 officeDetails = Sekretariat
 order = Reihenfolge
 ownerName = Inhaber
-patient = SimPat
-patientHas = SimPat hat
-patientSpeaks = SimPat spricht
+patient = SP
+patientHas = SP hat
+patientSpeaks = SP spricht
 persons = Personen
 plz = PLZ
 plzCity = PLZ, Ort
@@ -111,7 +111,7 @@ searchFor = Suchen nach...
 selectLanguage = Sprache w\u00E4hlen:
 showAnswered = beantwortete anzeigen
 showUnanswered = unbeantwortete anzeigen
-simPats = SimPats
+simPats = SPs
 slotUntilChange = max. Studenten bis Wechsel
 socialInsuranceNo = SV-Nummer
 specification = Spezifikation
@@ -154,7 +154,7 @@ success = Aktion erfolgreich
 tableSize = Tabellengr\u00F6sse
 
 #SimPat
-simPat = SimPat
+simPat = SP
 simulationPatients = Simulationspatienten
 traits = Merkmale
 anamnesisValues = Fragebogen
@@ -168,8 +168,8 @@ importeosce=Aus eOSCE importieren
 exportosce=OSCE exportieren
 role = Rolle
 roles = Rollen
-topicsAndSpec = Fachgebiete & Spezifikation
-roleScriptTemplate = Rollenskriptvorlage
+topicsAndSpec = Fachgebiete
+roleScriptTemplate = Dokumentenger\u00FCste
 students = Studenten
 warningValidValue = Bitte einen g\u00FCltigen Wert eingeben!
 warningEnterYear = Bitte ein Jahr eingeben!
@@ -219,8 +219,8 @@ warningFillRequiredFields = Bitte alle Pflichtfelder ausf\u00F6llen!
 ####ROLES
 
 #RoleView
-previousRole = Vorherige Rolle
-homeRole = Home
+previousRole = Vorherige Version
+homeRole = Aktuelle Version
 
 #FilterPanel
 roleComplexity = Komplexit\u00E4t
@@ -232,13 +232,15 @@ newRole = Neue Rolle
 roleActive = Active
 
 #RoleDetailsView/RoleDetail
-roleDetail = Rollendetails
+roleDetail = Rolle
 roleName = Rollenbezeichnung
 roleAcronym = Abk\u00FCrzung
 roleType = Rollentyp
+sum=Absolute Anzahl Backup-SPs
+factor=Verh\u00E4ltnis Backup-SPs / Anzahl Parcours
 
 #RoleDetailsView/RoleParticipants
-roleParticipants = Rollenbeteiligte
+roleParticipants = Rollenautoren
 author = Autor
 reviewer = Revisor
 addAuthor = Autor hinzuf\u00FCgen
@@ -252,7 +254,7 @@ keywordExists = Schl\u00FCsselwort existiert bereits!
 enterKeyword = Schl\u00FCsselwort eingeben...
 
 #RoleDetailsView/Learning
-learning = Lernen
+learning = Lernziele
 majorBtnLbl = Prim\u00E4rer Skill hinzuf\u00FCgen
 minorBtnLbl = Sekund\u00E4rer Skill hinzuf\u00FCgen
 mainClassi = Hauptklassifizierung
@@ -286,22 +288,22 @@ roleConfirmCriterionDelete= Sind Sie sicher, dass Sie dieses Kriterium l\u00F6sc
 roleOptionConfirmDelete= Sind Sie sicher, dass Sie diese Option l\u00F6schen wollen?
 
 #SearchCriteriaSubView
-searchCriteria = Suchkriterien
+searchCriteria = Kriterien f\u00FCr SP-Auswahl
 furtherCriteria = Weitere Kriterien
 addSimpleSearchCriteria= Suchkriterium hinzuf\u00FCgen
 simpleSearchCriteriaName= Name
 simpleSearchCriteriaValue= Wert
 
 #File
-roleFile = Datei
+roleFile = Karten
 filePath= Pfad
 fileDescription = Beschreibung
-addRoleFile= Neue Rollendatei
+addRoleFile= Neue Karte
 fileUploadSuccess = Datei erfolgreich hochgeladen
 
 #RoleScript
-roleScript = Rollenskript
-selectRoleTemplate = Rollenvorlage ausw\u00E4hlen
+roleScript = Rollendokumente
+selectRoleTemplate = Dokumentenger\u00FCst ausw\u00E4hlen
 
 #MajorMinorPopup
 majorLbl= Grundlegende \u00C4nderungen
@@ -331,7 +333,7 @@ studyYears = Studienjahr
 warningAssignedRoleTopic = Disziplin kann nicht gel\u00F6scht werden, da sie ein zugewiesenes Fachgebiet hat!
 
 ####Role Template
-addRoleScriptTemplate = Neue Vorlage hinzuf\u00FCgen
+addRoleScriptTemplate = Neues Ger\u00FCst hinzuf\u00FCgen
 dateCreated = Erstellt am
 dateEdited = Zuletzt bearbeitet
 addItem = Abschnitt hinzuf\u00FCgen
@@ -356,11 +358,16 @@ roomMaterialPriceType = Verrechnungsart
 #Add/Edit Semester Popup
 year = Jahr
 maxYearlySalary = Maximales Jahreseinkommen
-salarySimpat = Stundenlohn Simpat
+salarySimpat = Stundenlohn SP
 salaryExtra = Stundenlohn Statist
 
 #Manage Osces
+general = Allgemein
+attributes = Eigenschaften
+breaks = Pausen
+
 osce = OSCE
+remark = Bemerkungen
 osceMaxCircuits = Max. Parcours
 osceMaxStudents = Max. Studenten
 osceStationLength = Postenl\u00E4nge
@@ -444,7 +451,7 @@ warningScheduleNotPostponed = Zeitplan wurde nicht verschoben!
 warningNoPreviousDay = Kein vorangehender Tag!
 warningHeaderValue=Bitte g\u00FCltigen Wert f\u00FCr OSCE eingeben
 warningStartEndTime=Startzeit muss vor Endzeit liegen.
-warningGenerate=Bitte Werte f\u00FCr Disziplin und Feld eingeben!
+warningGenerate=Bitte Werte f\u00FCr Disziplin und Fachgebiet eingeben!
 dataWarning = Datum zu sp\u00E4t
 dataPastDateWarning = Datum darf nicht in der Vergangenheit liegen!
 splittingNotAllowWarning=Auftrennen nicht erlaubt. Tagesendzeit muss sp\u00E4ter als 13:00 sein.
@@ -474,9 +481,9 @@ exaPlanMiddleBreak = Mittlere Pause:
 exaPlanNumRooms = Anzahl R\u00E4ume:
 exaPlanLunchBreak = Mittagspause:
 exaPlanLongBreak= Lange Pause:
-exaPlanChangeBreak = SimPat-Wechsel-Pause:
+exaPlanChangeBreak = SP-Wechsel-Pause:
 exaPlanAssignStudents = Studenten zuweisen
-exaPlanAssignSp = SimPats zuweisen
+exaPlanAssignSp = SPs zuweisen
 
 #ExaminationScheduleActivity
 exaPlanBreakPost = SP Pause
@@ -519,7 +526,7 @@ summoningsVarFrom = [fromName]
 summoningsVarAssignment = [assignment]
 summoningsToName = Vorname und Name des Empf\u00E4ngers
 summoningsFromName = Name des Senders.
-summoningsAssignment = Zuweisungen f\u00FCr SimPat oder Examinator.
+summoningsAssignment = Zuweisungen f\u00FCr SP oder Examinator.
 summoningsOnlyIfExaminer = Raumnummer wird nur f\u00FCr Examinatoren angezeigt.
 summoningsAssignmentFormatHead = Anzeigeformat f\u00FCr Zuweisungen:
 summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
@@ -547,10 +554,10 @@ warningSelectStudent = Bitte mindestens einen Studenten ausw\u00E4hlen!
 ##################### - EXAMINATION - ######################
 
 #RoleAssignments/manualStandardizedPatientInSemesterAssignmentPopup
-warningNoActiveSimPat = Kein aktivierter SimPat vorhanden!
-roleAddManually = SimPats manuell hinzuf\u00FCgen
+warningNoActiveSimPat = Kein aktivierter SP vorhanden!
+roleAddManually = SPs manuell hinzuf\u00FCgen
 roleAddAllActive = Alle aktiven SP hinzuf\u00FCgen
-roleEnterPatientName = Bitte Name eines SimPat eingeben...
+roleEnterPatientName = Bitte Name eines SP eingeben...
 
 #RoleAssignments/OsceDaySubView
 roleOSCESecurityChange = Sind Sie sicher, dass Sie den Sicherheitsstatus \u00E4ndern wollen?
@@ -563,21 +570,21 @@ confirmationDeleteAssignment = Wollen Sie diese Zuweisung wirklich l\u00F6schen?
 roleAcceptedTrainings = Angenommene Trainings.
 roleAcceptedOsces = Angenommene OSCEs
 roleAssignedRoles = Zugewiesene Rollen
-rolePatientInformation = Information \u00FCber SimPat
+rolePatientInformation = Information \u00FCber SP
 
 #RoleAssignments/RoleAssignmentView
-roleSurveyImport = Umfragedaten importieren
-roleGetImport = Umfragedaten exportieren
+roleSurveyImport = SP-Umfragedaten importieren
+roleGetImport = SP-Umfragedaten exportieren
 roleAutoAssign = Rollen automatisch zuweisen
 roleAccepted = Akzeptiert
 roleAssignTo = Zuweisen an
 warningPleaseSelectRole = Bitte Rolle ausw\u00E4hlen!
 
 #RoleAssignments/RoleAssignmentPatientInSemesterActivity
-warningPatientIsNotAccepted = SimPat hat nicht akzeptiert!
-warningPatientAlreadyAssigned = SimPat ist bereits zugewiesen!
-confirmationAutoAssignmentSuccess = SimPats erfolgreich den Rollen zugewiesen!
-errorAutoAssignmentFailure = SimPats konnten nicht den Rollen zugewiesen werden!
+warningPatientIsNotAccepted = SP hat nicht akzeptiert!
+warningPatientAlreadyAssigned = SP ist bereits zugewiesen!
+confirmationAutoAssignmentSuccess = SPs erfolgreich den Rollen zugewiesen!
+errorAutoAssignmentFailure = SPs konnten nicht den Rollen zugewiesen werden!
 dmzShowReply = Zeige Nachrichten vom DMZ-Server an
 roleBackupViewHeading = Pause
 
@@ -690,7 +697,7 @@ assignmentsOutput=Zuweisungsresultate
 afterTheOsce=Nach dem OSCE*
 
 osceLunchBreakRequiredFiled = Mittagspause sp\u00E4testens nach
-osceLongBreakRequiredFiled = Lange Paue sp\u00E4testens nach
+osceLongBreakRequiredFiled = Lange Pause sp\u00E4testens nach
 
 warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
 numberOfRotationsInThisSequence=Anzahl Wechsel in dieser Sequenz
@@ -732,56 +739,49 @@ newBreakDurationNotNull=Pausendauer darf nicht leer oder negativ sein!
 ignoreAcceptedOsceDay=Angenommenen OSCE-Termin ignorieren
 
 #payment
-payment=Payment
+payment = Kostenrechnung
 #payment
-exportStudent=export Student
-exportSP=export SP
-copy=copy
+exportStudent=Studenten exportieren
+exportSP=SPs exportieren
+copy=Kopieren
 
 discipline=Disziplin
 topic=Fachgebiet
-room=Room
-roomAlreadyAssignWantToExcahnge=Room is already assign to other post do you want to exchange the rooms?
-
-osceSemester=Osce/Semester
+room = Raum
+roomAlreadyAssignWantToExcahnge = Dieser Raum ist bereits einem anderen Posten zugewiesen. Wollen Sie den Raum trotzdem zuweisen?
+roleUsage=Verwendung der Rolle
 
 #spec issue change
-exchange=Exchange
-exchangeSpError=Standardized patient not selected
-exchangeStudError=Student not selected
-#spec issue change
-StudentDetailsPlace=Student Management
-anonymize=Anonymize
+exchange = Tauschen**
+exchangeSpError = Kein SP ausgew\u00E4hlt!
+exchangeStudError = Kein Student ausgew\u00E4hlt
+StudentDetailsPlace = Studenten verwalten
+anonymize = Anonymisieren
 
+startDate = Startdatum
+endDate = Enddatum
+osceSemesterMessage=Bitte in beiden Feldern ein Datum eingeben!
 
-startDate=Start Date
-endDate=End Date
-osceSemesterMessage=Please enter date value for both date
+noDataFound = Keine Daten gefunden!
 
-noDataFound=No Data Found
-
-clear=clear
-addPoint=Add Point
-minmum=min :*
-max=max :*
-minMaxNotNull=min and max cannot be null
+clear = Zur\u00FCcksetzen
+addPoint=Punkt hinzuf\u00FCgen
+minmum=min.:
+max=max.:
+minMaxNotNull=Minimum und Maximum d\u00FCrfen nicht 0 sein!
 
 #export checklist
-exportChecklist=Export CheckList
-#export checklist
+exportChecklist = Checkliste exportieren
 
-sum=Sum
-factor=Factor
-paymentInstitute=Dekanat, Medizinische Fakultät
+paymentInstitute=Dekanat, Medizinische Fakult\u00E4t
 paymentName=Kaspar Traub
 
+studentName=Name Student
+studentLogicalBreak=Pause Student
 
-studentName=student name
-studentLogicalBreak=Student Break
-
-previousAssignmentWillLost=previous assignment will be lost if any
-alphabeticOrder=Alphabatically
-scrumbleOrder=Scrumble
-item=item
-impression=impression
-resetToDefaultTemplate=Please reset to default template and try again.
+previousAssignmentWillLost=Vorherige zuweisung geht verloren wenn eine **
+alphabeticOrder=Alphabetisch
+scrumbleOrder=Lackglasur**
+item = Gegenstand
+impression = Eindruck
+resetToDefaultTemplate=Bitte auf Standardvorlage zur\u00FCcksetzen und erneut versuchen!
