--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -100,12 +100,12 @@ DETAILS = Details
 NEW = New created
 
 #Study Year
-SJ1=SJ1
-SJ2=SJ2
-SJ3=SJ3
-SJ4=SJ4
-SJ5=SJ5
-SJ6=SJ6
+SJ1=1.BASJ
+SJ2=2.BASJ
+SJ3=3.BASJ
+SJ4=1.MASJ
+SJ5=2.MASJ
+SJ6=3.MASJ
 
 B = B-Bewilligung
 C = C-Bewilligung
@@ -162,6 +162,7 @@ OSCE_CLOSED = Geschlossener OSCE
 #Semesters
 HS = HS
 FS = FS
+FED = Staats
 
 #PostType
 NORMAL = Regul\u00E4rer Posten
@@ -170,7 +171,7 @@ ANAMNESIS_THERAPY = Doppelposten
 PREPARATION = Vorbereitungsposten
 
 #OSCESecurityStatus
-SIMPLE = Regul\u00E4re Pr\u00FCfung 
+SIMPLE = Fakult\u00E4rer OSCE
 FEDERAL_EXAM = Staatsexamen
 
 #OsceSequences
