--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -100,12 +100,12 @@ DETAILS = Details
 NEW = New created
 
 #Study Year
-SJ1=SJ1
-SJ2=SJ2
-SJ3=SJ3
-SJ4=SJ4
-SJ5=SJ5
-SJ6=SJ6
+SJ1=1.BASJ
+SJ2=2.BASJ
+SJ3=3.BASJ
+SJ4=1.MASJ
+SJ5=2.MASJ
+SJ6=3.MASJ
 
 B = B-permit
 C = C-permit
@@ -162,6 +162,7 @@ OSCE_CLOSED = Closed OSCE
 #Semesters
 HS = HS
 FS = FS
+FED = Fed
 
 # PostType
 NORMAL = Regular Station
@@ -170,7 +171,7 @@ ANAMNESIS_THERAPY = Double Station
 PREPARATION = Preparation Station
 
 #OSCESecurityStatus
-SIMPLE = Regular exam 
+SIMPLE = Regular OSCE 
 FEDERAL_EXAM = Federal exam
 
 #OsceSequences
