--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1,11 +1,11 @@
 add = Add
 addAnswer = Add answer
 addClinic = Add clinic
-addDoctor = Add lecturer
+addDoctor = Add examiner
 addLangSkill = Add language skill
 addLanguage = Add language
 addNationality = Add nationality
-addPatient = Add simPat
+addPatient = Add SP
 addProfession = Add profession
 addRoom = Add room
 addTitle = Add title
@@ -35,7 +35,7 @@ comparison = Comparison
 complexity = Complexity
 country = Country
 createClinic = Create clinic
-createDoctor = Create lecturer
+createDoctor = Create examiner
 criterion = Criterion
 dateTime = Date/time
 dateTimeFormat = dd. MMMM yyyy
@@ -45,8 +45,8 @@ details = Particulars*
 edit = Edit
 editAnamnesisValue = Edit anamnesis value*
 editClinic = Edit clinic
-editDoctor = Edit lecturer
-editPatient = Edit simPat
+editDoctor = Edit examiner
+editPatient = Edit SP
 email = Email
 enterAnswer = Please enter answer...
 enterQuestion = Please enter question...
@@ -82,9 +82,9 @@ noTitle = Question does not belong to a title.
 officeDetails = Office
 order = Order
 ownerName = Owner
-patient = SimPat
-patientHas = SimPat has
-patientSpeaks = SimPat speaks
+patient = SP
+patientHas = SP has
+patientSpeaks = SP speaks
 persons = Persons
 plz = PLZ
 plzCity = PLZ, City
@@ -111,7 +111,7 @@ searchFor = Search for...
 selectLanguage = Select language:
 showAnswered = Show answered
 showUnanswered = Show unanswered
-simPats = SimPats
+simPats = SPs
 slotUntilChange = max. students until change
 socialInsuranceNo = Social Insurance No.
 specification = Specification
@@ -154,13 +154,13 @@ success = Operation successful
 tableSize = Table size
 
 #SimPat
-simPat = SimPat
+simPat = SP
 simulationPatients = Simulated patients
 traits = Traits
 anamnesisValues = Questionnaire
 
 #Doctors
-doctors = Lecturers
+doctors = Examiners
 clinics = Clinics
 
 #Role
@@ -168,8 +168,8 @@ importeosce=Import from eOSCE
 exportosce=Export OSCE
 role = Role
 roles = Roles
-topicsAndSpec = Specific fields & specification
-roleScriptTemplate = Role script template
+topicsAndSpec = Specific fields
+roleScriptTemplate = Document scaffolds
 students = Studenten
 warningValidValue = Please enter valid data!
 warningEnterYear = Please enter a year!
@@ -219,8 +219,8 @@ warningFillRequiredFields = Please fill all the required fields!
 ####ROLES
 
 #RoleView
-previousRole = Previous Role
-homeRole = Home
+previousRole = Previous version
+homeRole = Current version
 
 #FilterPanel
 roleComplexity = Complexity
@@ -232,13 +232,15 @@ newRole = New Role
 roleActive = Active
 
 #RoleDetailsView/RoleDetail
-roleDetail = Role Detail
+roleDetail = Role
 roleName = Role designation
 roleAcronym = Acronym
 roleType = Role type
+sum=Absolute number of backup-SPs
+factor=Proportion of backup-SPs vs. no. of circuits
 
 #RoleDetailsView/RoleParticipants
-roleParticipants = Role Participants
+roleParticipants = Role authors
 author = Author
 reviewer = Reviewer
 addAuthor = Add author
@@ -252,7 +254,7 @@ keywordExists = Keyword already exists!
 enterKeyword = Enter Keyword...
 
 #RoleDetailsView/Learning
-learning = Learning
+learning = Learning objectives
 majorBtnLbl = Add primary skill
 minorBtnLbl = Add secondary skill
 mainClassi = Main classification
@@ -286,22 +288,22 @@ roleConfirmCriterionDelete = Are you sure you want to delete this criterion?
 roleOptionConfirmDelete= Are you sure you want to delete this option?
 
 #SearchCriteriaSubView
-searchCriteria = Search criteria
+searchCriteria = Criteria for SP-selection
 furtherCriteria = Further criteria
 addSimpleSearchCriteria= Add search criterion
 simpleSearchCriteriaName= Name
 simpleSearchCriteriaValue= Value
 
 #File
-roleFile = File
+roleFile = Cards
 filePath= Path
 fileDescription = Description
-addRoleFile = Add role file
+addRoleFile = Add card
 fileUploadSuccess=File uploaded successfully
 
 #RoleScript
-roleScript = Role script
-selectRoleTemplate = Select role template
+roleScript = Role documents
+selectRoleTemplate = Select document scaffolding
 
 #MajorMinorPopup
 majorLbl = Major changes
@@ -331,7 +333,7 @@ studyYears = Study year
 warningAssignedRoleTopic = Discipline can not be deleted if it has an assigned specific field.
 
 ####Role Template
-addRoleScriptTemplate = Add new template
+addRoleScriptTemplate = Add new scaffolding
 dateCreated = Date created
 dateEdited = Date edited
 addItem = Add item
@@ -356,11 +358,16 @@ roomMaterialPriceType = Settlement type
 #Add/Edit Semester Popup
 year = Year
 maxYearlySalary = Maximum yearly salary
-salarySimpat = Salary Simpat
+salarySimpat = Salary SP
 salaryExtra = Salary extras
 
 #Manage Osces
+general = General
+attributes = Attributes
+breaks = Breaks
+
 osce = OSCE
+remark = Remarks
 osceMaxCircuits = Max. circuits
 osceMaxStudents = Max. students
 osceStationLength = Station length
@@ -444,7 +451,7 @@ warningScheduleNotPostponed = Schedule is not postponed!
 warningNoPreviousDay = No previous day!
 warningHeaderValue=Please Enter Valid Value For OSCE
 warningStartEndTime=Start time has to be before end time!
-warningGenerate=Please enter  values for discipline and field!
+warningGenerate=Please enter values for discipline and specific field!
 dataWarning = Date too late
 dataPastDateWarning = Date must not be in the past!
 splittingNotAllowWarning= Splitting is not allowed. Day end time must be greater than 13:00.
@@ -519,7 +526,7 @@ summoningsVarFrom = [fromName]
 summoningsVarAssignment = [assignment]
 summoningsToName = Full name of receiepent
 summoningsFromName = Senders name
-summoningsAssignment = Assignments for SimPat or Examiner.
+summoningsAssignment = Assignments for SP or Examiner.
 summoningsOnlyIfExaminer = Room number will only appear if recepient is an examiner.
 summoningsAssignmentFormatHead = Display format for assignments:
 summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
@@ -547,10 +554,10 @@ warningSelectStudent = Please select at least one student!
 ##################### - EXAMINATION - ######################
 
 #RoleAssignments/manualStandardizedPatientInSemesterAssignmentPopup
-warningNoActiveSimPat = No simpat is activated!
-roleAddManually = Manually add SimPats
+warningNoActiveSimPat = No SP is activated!
+roleAddManually = Manually add SPs
 roleAddAllActive = Add all active SPs
-roleEnterPatientName = Please enter a SimPat's name...
+roleEnterPatientName = Please enter a SP's name...
 
 #RoleAssignments/OsceDaySubView
 roleOSCESecurityChange = Are you sure you want change the security status?
@@ -563,20 +570,21 @@ confirmationDeleteAssignment = Do you really want to delete this assignment?
 roleAcceptedTrainings = Accepted trainings.
 roleAcceptedOsces = Accepted OSCEs
 roleAssignedRoles = Assigned roles
-rolePatientInformation = Information on SimPat
+rolePatientInformation = Information on SP
 
 #RoleAssignments/RoleAssignmentView
-roleSurveyImport = Import survey data
+roleSurveyImport = Import SP survey data
+roleGetImport = Export SP survey data
 roleAutoAssign = Automatically assign roles
 roleAccepted = Accepted
 roleAssignTo = Assign To
 warningPleaseSelectRole = Please Select Role!
 
 #RoleAssignments/RoleAssignmentPatientInSemesterActivity
-warningPatientIsNotAccepted = SimPat has not accepted!
-warningPatientAlreadyAssigned = SimPat is already assigned!
-confirmationAutoAssignmentSuccess = SimPats successfully assigned to roles!
-errorAutoAssignmentFailure = SimPats could not be assigned to roles!
+warningPatientIsNotAccepted = SP has not accepted!
+warningPatientAlreadyAssigned = SP is already assigned!
+confirmationAutoAssignmentSuccess = SPs successfully assigned to roles!
+errorAutoAssignmentFailure = SPs could not be assigned to roles!
 dmzShowReply = Show messages received from DMZ-Server
 roleBackupViewHeading = Break
 
@@ -731,56 +739,49 @@ newBreakDurationNotNull=Break duration cannot be empty or negative!
 ignoreAcceptedOsceDay=Ignore Accepted OsceDay
 
 #payment
-payment=Payment
+payment = Cost accounting
 #payment
-exportStudent=export Student
-exportSP=export SP
-copy=copy
+exportStudent = Export students
+exportSP = Export SPs
+copy=Copy
 
-discipline=Discipline
-topic=Specific field
-room=Room
-roomAlreadyAssignWantToExcahnge = Room is already assigned to a different station. Do you want to exchange the rooms?
-osceSemester=Osce/Semester
+discipline = Discipline
+topic= Specific field
+room = Room
+roomAlreadyAssignWantToExcahnge = Room is already assigned to a different station. Do you still want to assign this room?
+roleUsage=Past use of role
 
 #spec issue change
-exchange=Exchange
-exchangeSpError=Standardized patient not selected
-exchangeStudError=Student not selected
-#spec issue change
-StudentDetailsPlace=Student Management
+exchange = Exchange**
+exchangeSpError = No SP has been selected!
+exchangeStudError = No student has been selected!
+StudentDetailsPlace = Student management
+anonymize = Anonymize
 
-anonymize=Anonymize
+startDate = Start date
+endDate = End date
+osceSemesterMessage = Please enter a date in both fields!
 
-
-startDate=Start Date
-endDate=End Date
-osceSemesterMessage=Please enter date value for both date
-
-noDataFound=No Data Found
+noDataFound = No data found!
 
 clear=clear
 addPoint=Add Point
 minmum=min :*
 max=max :*
-minMaxNotNull=min and max cannot be null
+minMaxNotNull=Minimum and maximum must not be 0!
 
 #export checklist
-exportChecklist=Export CheckList
-#export checklist
+exportChecklist=Export checklist
 
-sum=Sum
-factor=Factor
-paymentInstitute=Dekanat, Medizinische Fakultät
+paymentInstitute=Dekanat, Medizinische Fakult\u00E4t
 paymentName=Kaspar Traub
 
+studentName=Student name
+studentLogicalBreak=Student break
 
-studentName=student name
-studentLogicalBreak=Student Break
-
-previousAssignmentWillLost=previous assignment will be lost if any
-alphabeticOrder=Alphabatically
-scrumbleOrder=Scrumble
-item=item
-impression=impression
-resetToDefaultTemplate=Please reset to default template and try again.
+previousAssignmentWillLost=Previous assignment will be lost if any **
+alphabeticOrder = Alphabatically
+scrumbleOrder=Scrumble**
+item = item
+impression = impression
+resetToDefaultTemplate = Please reset to default template and try again!
