Changed some translations

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -258,7 +258,7 @@ learning = Lernziele
 majorBtnLbl = Prim\u00E4rer Skill hinzuf\u00FCgen
 minorBtnLbl = Sekund\u00E4rer Skill hinzuf\u00FCgen
 mainClassi = Hauptklassifizierung
-classiTopic = Klassifizierung Fachgebiet
+classiTopic = Unterklassifizierung
 topicLbl = Fachgebiet
 skillLevel = Skill-Stufe
 addSkill = Skill hinzuf\u00FCgen
@@ -680,7 +680,7 @@ bellSchedValidatePlusMinus = Bitte + / - Minuten eingeben!
 nationaltiyWarning = Nationalit\u00E4t existiert bereits!
 
 #LearningObjectivView
-lrnObjAppliance = Hilfsmittel
+lrnObjAppliance = Problemtyp
 
 warningStandardizedRoleUnassigned = Bitte jedem Posten eine Rolle zuweisen!
 accessNotification = Zugriff wurde bereits zugewiesen!
