--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -258,7 +258,7 @@ learning = Learning objectives
 majorBtnLbl = Add primary skill
 minorBtnLbl = Add secondary skill
 mainClassi = Main classification
-classiTopic = Classification specific field
+classiTopic = Secondary classification
 topicLbl = Specific field
 skillLevel = Skill level
 addSkill = Add skill
@@ -680,7 +680,7 @@ bellSchedValidatePlusMinus = Please enter + / - minutes!
 nationaltiyWarning = Nationality already exists!
 
 #LearningObjectivView
-lrnObjAppliance = Appliance
+lrnObjAppliance = Problem type
 
 warningStandardizedRoleUnassigned = Please assign a role to each station!
 accessNotification = Access is already assigned!
