- Fixed SemesterPopupViewImpl Exception - Fixed translations of Semesters enum - De-errorified DMZSyncServiceImplTest (the test is probably garbage; didn't check...) - updated cn constants

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -302,7 +302,7 @@ addRoleFile= Neue Karte
 fileUploadSuccess = Datei erfolgreich hochgeladen
 
 #RoleScript
-roleScript = Rollendokumente
+roleScript = Rollenskripte
 selectRoleTemplate = Dokumentenger\u00FCst ausw\u00E4hlen
 
 #MajorMinorPopup
@@ -791,3 +791,5 @@ studActError = Keine weiteren Zeitschlitze verf\u00FCgbar
 clearExaminerAssingment= Wollen Sie alle zugewiesenen Examinatoren f\u00FCr diesen Posten l\u00F6schen?
 clearExaminerAssingmentSuccess= Zugewiesene Examinatoren erfolgreich entfernt!
 clearExaminerAssingmentNotSuccess= Zugewiesene Examinatoren konnten nicht entfernt werden!
+
+repe = repe
