--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -162,6 +162,7 @@ OSCE_CLOSED = OSCE_CLOSED
 #Semesters
 HS = HS
 FS = FS
+FED = FED
 
 #PostType
 NORMAL = NORMAL
@@ -179,3 +180,6 @@ OSCE_SEQUENCES_B = OSCE_SEQUENCES_B
 OSCE_SEQUENCES_C = OSCE_SEQUENCES_C
 OSCE_SEQUENCES_D = OSCE_SEQUENCES_D
 OSCE_SEQUENCES_E = OSCE_SEQUENCES_E
+
+item_analysis = item_analysis
+post_analysys = post_analysys
