--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -236,6 +236,8 @@ roleDetail = roleDetail
 roleName = roleName
 roleAcronym = roleAcronym
 roleType = roleType
+sum = sum
+factor = factor
 
 #RoleDetailsView/RoleParticipants
 roleParticipants = roleParticipants
@@ -360,7 +362,12 @@ salarySimpat = salarySimpat
 salaryExtra = salaryExtra
 
 #Manage Osces
+general = general
+attributes = attributes
+breaks = breaks
+
 osce = osce
+remark = remark
 osceMaxCircuits = osceMaxCircuits
 osceMaxStudents = osceMaxStudents
 osceStationLength = osceStationLength
@@ -567,6 +574,7 @@ rolePatientInformation = rolePatientInformation
 
 #RoleAssignments/RoleAssignmentView
 roleSurveyImport = roleSurveyImport
+roleGetImport = roleGetImport
 roleAutoAssign = roleAutoAssign
 roleAccepted = roleAccepted
 roleAssignTo = roleAssignTo
@@ -741,12 +749,47 @@ discipline = discipline
 topic = topic
 room = room
 roomAlreadyAssignWantToExcahnge = roomAlreadyAssignWantToExcahnge
-
-osceSemester = osceSemester
+roleUsage = roleUsage
 
 #spec issue change
 exchange = exchange
 exchangeSpError = exchangeSpError
 exchangeStudError = exchangeStudError
-#spec issue change
 StudentDetailsPlace = StudentDetailsPlace
+anonymize = anonymize
+
+startDate = startDate
+endDate = endDate
+osceSemesterMessage = osceSemesterMessage
+
+noDataFound = noDataFound
+
+clear = clear
+addPoint = addPoint
+minmum = minmum
+max = max
+minMaxNotNull = minMaxNotNull
+
+#export checklist
+exportChecklist = exportChecklist
+
+paymentInstitute = paymentInstitute
+paymentName = paymentName
+
+studentName = studentName
+studentLogicalBreak = studentLogicalBreak
+
+previousAssignmentWillLost = previousAssignmentWillLost
+alphabeticOrder = alphabeticOrder
+scrumbleOrder = scrumbleOrder
+item = item
+impression = impression
+resetToDefaultTemplate = resetToDefaultTemplate
+
+studActError = studActError
+
+clearExaminerAssingment = clearExaminerAssingment
+clearExaminerAssingmentSuccess = clearExaminerAssingmentSuccess
+clearExaminerAssingmentNotSuccess = clearExaminerAssingmentNotSuccess
+
+repe = repe
