--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -302,7 +302,7 @@ addRoleFile = Add card
 fileUploadSuccess=File uploaded successfully
 
 #RoleScript
-roleScript = Role documents
+roleScript = Role scripts
 selectRoleTemplate = Select document scaffolding
 
 #MajorMinorPopup
@@ -791,3 +791,5 @@ studActError = No more timeslots available!
 clearExaminerAssingment=Do you want to clear all the assigned examiners for this station?
 clearExaminerAssingmentSuccess= Assigned examiners successfully removed!
 clearExaminerAssingmentNotSuccess = Could not remove assigned examiners!
+
+repe = repe
