Rolemodule :checklist changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -793,3 +793,5 @@ clearExaminerAssingmentSuccess= Zugewiesene Examinatoren erfolgreich entfernt!
 clearExaminerAssingmentNotSuccess= Zugewiesene Examinatoren konnten nicht entfernt werden!
 
 repe = repe
+isOverallQuestion=is Overall Question :
+criteraCount=critera count :
