--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -793,3 +793,5 @@ clearExaminerAssingmentSuccess= Assigned examiners successfully removed!
 clearExaminerAssingmentNotSuccess = Could not remove assigned examiners!
 
 repe = repe
+isOverallQuestion=is Overall Question :
+criteraCount=critera count :
