--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -183,3 +183,21 @@ OSCE_SEQUENCES_E = OSCE_SEQUENCES_E
 
 item_analysis = item_analysis
 post_analysys = post_analysys
+
+#Color Names
+color_1=C01
+color_2=C02
+color_3=C03
+color_4=C04
+color_5=C05
+color_6=C06
+color_7=C07
+color_8=C08
+color_9=C09
+color_10=C10
+color_11=C11
+color_12=C12
+color_13=C13
+color_14=C14
+color_15=C15
+color_16=C16
