Export eOSCE and Statistical Evaluation Changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -795,3 +795,9 @@ clearExaminerAssingmentNotSuccess= Zugewiesene Examinatoren konnten nicht entfer
 repe = repe
 isOverallQuestion=is Overall Question :
 criteraCount=critera count :
+
+#eOSCE bucket change
+bucketName = Bucket Name 
+accessKey = Access Key
+secretKey = Secret Key
+bucketInfoError = No bucket information found
