--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -793,3 +793,9 @@ clearExaminerAssingmentSuccess = clearExaminerAssingmentSuccess
 clearExaminerAssingmentNotSuccess = clearExaminerAssingmentNotSuccess
 
 repe = repe
+
+#eOSCE bucket change
+bucketName = bucketName 
+accessKey = accessKey
+secretKey = secretKet
+bucketInfoError = bucketInfoError 
