--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -656,8 +656,8 @@ exportProcessed = Exported files
 exportUnprocessed = Files to be exported
 exportError = Error exporting files
 exportFetchProcessedError = Error fetching processed files
-exportFetchUnprocessedError=Error in fetching unProcessed files
-exportSuccess = Files S3 successfully placed in S3
+exportFetchUnprocessedError=Error in Export Files on S3
+exportSuccess = Files successfully placed in S3
 exportProcessedExported = All processed files were exported
 exportAllFilesProcessed = All files were processed
 exportWarningAlreadyExported = Selected files are already exported, Do you want to continue?
@@ -795,3 +795,9 @@ clearExaminerAssingmentNotSuccess = Could not remove assigned examiners!
 repe = repe
 isOverallQuestion=is Overall Question :
 criteraCount=critera count :
+
+#eOSCE bucket change
+bucketName = Bucket Name 
+accessKey = Access Key
+secretKey = Secret Key
+bucketInfoError = No bucket information found
