Added / changed translations

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -11,7 +11,7 @@ addRoom = Raum hinzuf\u00FCgen
 addTitle = Titel hinzuf\u00FCgen
 addTrait = Merkmal hinzuf\u00FCgen
 addUser = Benutzer hinzuf\u00FCgen
-administrator = Benutzer
+administrator = Benutzerverwaltung
 age = Alter
 answer = Antwort
 answered = Beantwortet?
@@ -20,7 +20,7 @@ answerPending = Unbeantwortet
 aviableRole = Verf\u00FCgbare Rollen
 bank = Bank
 bankAccount = Bankkonto
-basicFilter = Prim\u00E4rer Filter
+basicFilter = Numerischer Filter
 bic = BIC
 bindType = Verkn\u00FCpfung
 birthday = Geburtsdatum
@@ -56,6 +56,7 @@ field = Feld
 filterTitle = Titel-Filter
 from = Von
 gender = Geschlecht
+genderFilter = Geschlecht
 generalInformation = Allgemeine Informationen
 googleMaps = Google maps
 handledConfidentially = Diese Informationen werden vertraulich behandelt.
@@ -97,7 +98,7 @@ profession = Beruf
 question = Frage
 resetFilters = Filter zur\u00FCcksetzen
 responsibilities = Zust\u00E4ndigkeiten
-roleAssignments = Rollenzuweisungen
+roleAssignments = SP-Auswahl
 roomLength = L\u00E4nge
 roomNumber = Raum-Nr.
 roomWidth = Breite
@@ -153,6 +154,11 @@ contactInfo = Kontaktinformationen
 success = Aktion erfolgreich
 tableSize = Tabellengr\u00F6sse
 
+manageFacilities = Ressourcen verwalten
+manageMasterData = Versch. Stammdaten
+manageSpMasterData = SP Stammdaten
+manageSystem = OSCEManager
+
 #SimPat
 simPat = SP
 simulationPatients = Simulationspatienten
@@ -164,24 +170,26 @@ doctors = Examinatoren
 clinics = Kliniken
 
 #Role
-importeosce=Aus eOSCE importieren
-exportosce=OSCE exportieren
+importeosce=Pr\u00FCfungsergebnisse importieren (eOSCE)
+exportosce=Daten nach eOSCE exportieren
 role = Rolle
 roles = Rollen
-topicsAndSpec = Fachgebiete
-roleScriptTemplate = Dokumentenger\u00FCste
+topicsAndSpec = Dsiziplinen & Fertigkeiten
+roleScriptTemplate = Dokumentenbausteine
+importStudentData = Studentendaten importieren
 students = Studenten
 warningValidValue = Bitte einen g\u00FCltigen Wert eingeben!
 warningEnterYear = Bitte ein Jahr eingeben!
 warningEnterSemester = Bitte ein Semester eingeben!
 
 #Exams
-exams = Pr\u00FCfungen
+exams = OSCE Administration
 semester = Semester
-manageOsces = OSCEs verwalten
+manageOsces = Eckdaten festlegen
 circuit = Parcours
-examinationSchedule = Pr\u00FCfungsplan
-sendSummonings = Aufgebote versenden
+defineCircuit = Parcours definieren
+examinationSchedule = Zeitplan bearbeiten
+sendSummonings = Einladungen versenden
 printIndividualSchedules = Laufpl\u00E4ne erstellen
 exportBellSchedule = Klingelplan erstellen
 
@@ -192,8 +200,8 @@ nationalities = Nationalit\u00E4ten
 languages = Sprachen
 professions = Berufe
 rooms = R\u00E4ume
-log = Log
-importObjective = Lernziel importieren
+log = T\u00E4tigkeitsprotokoll
+importObjective = Aus SCLO importieren
 
 ######################### - SP - #########################
 #AnamnesisCheckView
@@ -259,7 +267,7 @@ majorBtnLbl = Prim\u00E4rer Skill hinzuf\u00FCgen
 minorBtnLbl = Sekund\u00E4rer Skill hinzuf\u00FCgen
 mainClassi = Hauptklassifizierung
 classiTopic = Unterklassifizierung
-topicLbl = Fachgebiet
+topicLbl = Fertigkeit
 skillLevel = Skill-Stufe
 addSkill = Skill hinzuf\u00FCgen
 
@@ -303,7 +311,7 @@ fileUploadSuccess = Datei erfolgreich hochgeladen
 
 #RoleScript
 roleScript = Rollenskripte
-selectRoleTemplate = Dokumentenger\u00FCst ausw\u00E4hlen
+selectRoleTemplate = Dokumentenbaustein ausw\u00E4hlen
 
 #MajorMinorPopup
 majorLbl= Grundlegende \u00C4nderungen
@@ -323,17 +331,17 @@ confirmationMinorSkillAdded = Sekund\u00E4rer Skill hinzugef\u00FCgt!
 confirmationDeleteRole = rolle wirklich l\u00F6schen?
 
 ####Topics & Specification
-roleTopic = Fachgebiet
+roleTopic = Fertigkeit
 addDiscipline = Disziplin hinzuf\u00FCgen
-addRoleTopic = Fachgebiet hinzuf\u00FCgen
+addRoleTopic = Fertigkeit hinzuf\u00FCgen
 studyYear = SJ
 studyYears = Studienjahr
 
 #TopicsAndSpecActivity
-warningAssignedRoleTopic = Disziplin kann nicht gel\u00F6scht werden, da sie ein zugewiesenes Fachgebiet hat!
+warningAssignedRoleTopic = Disziplin kann nicht gel\u00F6scht werden, da sie eine zugewiesene Fertigkeit hat!
 
 ####Role Template
-addRoleScriptTemplate = Neues Ger\u00FCst hinzuf\u00FCgen
+addRoleScriptTemplate = Neuen Baustein hinzuf\u00FCgen
 dateCreated = Erstellt am
 dateEdited = Zuletzt bearbeitet
 addItem = Abschnitt hinzuf\u00FCgen
@@ -451,7 +459,7 @@ warningScheduleNotPostponed = Zeitplan wurde nicht verschoben!
 warningNoPreviousDay = Kein vorangehender Tag!
 warningHeaderValue=Bitte g\u00FCltigen Wert f\u00FCr OSCE eingeben
 warningStartEndTime=Startzeit muss vor Endzeit liegen.
-warningGenerate=Bitte Werte f\u00FCr Disziplin und Fachgebiet eingeben!
+warningGenerate=Bitte Werte f\u00FCr Disziplin und Fertigkeit eingeben!
 dataWarning = Datum zu sp\u00E4t
 dataPastDateWarning = Datum darf nicht in der Vergangenheit liegen!
 splittingNotAllowWarning=Auftrennen nicht erlaubt. Tagesendzeit muss sp\u00E4ter als 13:00 sein.
@@ -692,9 +700,9 @@ csvFileError = Datei nicht verarbeitet. student_id, name und prename sind Pflich
 statisticsEvaluation = Statistische Auswertung
 statisticsEvaluationPlace = Statistischer Auswertungsplatz*
 createOsce=OSCE erstellen
-osceAssignments=OSCE Zuweisungen
-assignmentsOutput=Zuweisungsresultate
-afterTheOsce=Nach dem OSCE*
+osceAssignments=Zuweisungen
+assignmentsOutput=OSCEManager Output
+afterTheOsce = Analysen
 
 osceLunchBreakRequiredFiled = Mittagspause sp\u00E4testens nach
 osceLongBreakRequiredFiled = Lange Pause sp\u00E4testens nach
@@ -746,7 +754,7 @@ exportSP=SPs exportieren
 copy=Kopieren
 
 discipline=Disziplin
-topic=Fachgebiet
+topic=Fertigkeit
 room = Raum
 roomAlreadyAssignWantToExcahnge = Dieser Raum ist bereits einem anderen Posten zugewiesen. Wollen Sie den Raum trotzdem zuweisen?
 roleUsage=Verwendung der Rolle
@@ -755,7 +763,7 @@ roleUsage=Verwendung der Rolle
 exchange = Tauschen**
 exchangeSpError = Kein SP ausgew\u00E4hlt!
 exchangeStudError = Kein Student ausgew\u00E4hlt
-StudentDetailsPlace = Studenten verwalten
+StudentDetailsPlace = Studenteninformationen
 anonymize = Anonymisieren
 
 startDate = Startdatum
@@ -781,7 +789,7 @@ studentLogicalBreak=Pause Student
 
 previousAssignmentWillLost=Vorherige zuweisung geht verloren wenn eine **
 alphabeticOrder=Alphabetisch
-scrumbleOrder=Lackglasur**
+scrumbleOrder=Reihenfolge verw\u00FCfeln
 item = Gegenstand
 impression = Eindruck
 resetToDefaultTemplate=Bitte auf Standardvorlage zur\u00FCcksetzen und erneut versuchen!
