--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -46,10 +46,10 @@ PROFESSION_EQUALS = SimPat hat
 PROFESSION_NOT_EQUALS = SimPat hat kein/e
 WORKPERMISSION_EQUALS = SimPat hat
 WORKPERMISSION_NOT_EQUALS = SimPat hat kein/e
-MARITIALSTATUS_EQUALS = SimPat is
-MARITIALSTATUS_NOT_EQUALS = SimPat isn't
-AGE = Age
-GENDER = Gender 
+MARITIALSTATUS_EQUALS = SimPat ist
+MARITIALSTATUS_NOT_EQUALS = SimPat ist nicht
+AGE = Alter
+GENDER = Geschlecht
 
 PERPIECE = Pro St\u00FCck
 PERDAY = Pro Tag
@@ -185,10 +185,10 @@ item_analysis=item_analysis
 post_analysys=post_analysys
 
 #Color Names
-color_1=ORANGE1
-color_2=YELLOW
-color_3=PINK1
-color_4=GREEN1
+color_1=Orange 1
+color_2=Gelb 1
+color_3=Pink 1
+color_4=Gr\u00FCn 1
 color_5=VIOLET1
 color_6=PINK2
 color_7=GREY1
