--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -153,6 +153,11 @@ contactInfo = contactInfo
 success = success
 tableSize = tableSize
 
+manageFacilities = manageFacilities
+manageMasterData = manageMasterData
+manageSpMasterData = manageSpMasterData
+manageSystem = manageSystem
+
 #SimPat
 simPat = simPat
 simulationPatients = simulationPatients
@@ -170,6 +175,7 @@ role = role
 roles = roles
 topicsAndSpec = topicsAndSpec
 roleScriptTemplate = roleScriptTemplate
+importStudentData = importStudentData
 students = students
 warningValidValue = warningValidValue
 warningEnterYear = warningEnterYear
@@ -180,6 +186,7 @@ exams = exams
 semester = semester
 manageOsces = manageOsces
 circuit = circuit
+defineCircuit = defineCircuit
 examinationSchedule = examinationSchedule
 sendSummonings = sendSummonings
 printIndividualSchedules = printIndividualSchedules
@@ -793,9 +800,11 @@ clearExaminerAssingmentSuccess = clearExaminerAssingmentSuccess
 clearExaminerAssingmentNotSuccess = clearExaminerAssingmentNotSuccess
 
 repe = repe
+isOverallQuestion = isOverallQuestion
+criteraCount = criteraCount
 
 #eOSCE bucket change
-bucketName = bucketName 
+bucketName = bucketName
 accessKey = accessKey
-secretKey = secretKet
-bucketInfoError = bucketInfoError 
+secretKey = secretKey
+bucketInfoError = bucketInfoError
