--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -9,9 +9,9 @@ addPatient = Add SP
 addProfession = Add profession
 addRoom = Add room
 addTitle = Add title
-addTrait = Add trait
+addTrait = Add attribute
 addUser = Add user
-administrator = User
+administrator = User management
 age = Age
 answer = Answer
 answered = Answered?
@@ -20,7 +20,7 @@ answerPending = Answer pending
 aviableRole = Available roles 
 bank = Bank
 bankAccount = Bank account
-basicFilter = Primary filter
+basicFilter = Numeric filter
 bic = BIC
 bindType = Linkage
 birthday = Birth date
@@ -56,6 +56,7 @@ field = Field
 filterTitle = Title filter
 from = From
 gender = Gender
+genderFilter = Gender
 generalInformation = General Information
 googleMaps = Google maps
 handledConfidentially = Data in this document is handled confidentially.
@@ -97,7 +98,7 @@ profession = Profession
 question = Question
 resetFilters = Reset filters
 responsibilities = Responsibilities
-roleAssignments = Role assignments
+roleAssignments = SP selection
 roomLength = Length
 roomNumber = Room No.
 roomWidth = Width
@@ -153,10 +154,15 @@ contactInfo = Contact details
 success = Operation successful
 tableSize = Table size
 
+manageFacilities = Manage Resources
+manageMasterData = Misc. basic data
+manageSpMasterData = SP basic data
+manageSystem = OSCEManager
+
 #SimPat
 simPat = SP
 simulationPatients = Simulated patients
-traits = Traits
+traits = Attributes
 anamnesisValues = Questionnaire
 
 #Doctors
@@ -164,26 +170,28 @@ doctors = Examiners
 clinics = Clinics
 
 #Role
-importeosce=Import from eOSCE
-exportosce=Export OSCE
+importeosce=Import test results (eOSCE)
+exportosce=Export data to eOSCE
 role = Role
 roles = Roles
-topicsAndSpec = Specific fields
-roleScriptTemplate = Document scaffolds
+topicsAndSpec = Disciplines & Skills
+roleScriptTemplate = Document components
+importStudentData = Import student data
 students = Studenten
 warningValidValue = Please enter valid data!
 warningEnterYear = Please enter a year!
 warningEnterSemester = Please enter a semester!
 
 #Exams
-exams = Exams
+exams = OSCE Administration
 semester = Semester
-manageOsces = Manage OSCEs
-circuit = Parcours*
-examinationSchedule = Examination plan*
-sendSummonings = Send summonings
-printIndividualSchedules = Create Operating plans
-exportBellSchedule = Export bell schedule
+manageOsces = Define basic data
+circuit = Circuit
+defineCircuit = Edit circuit details
+examinationSchedule = Edit schedule
+sendSummonings = Send invitations
+printIndividualSchedules = Print schedules
+exportBellSchedule = Export alarm schedule
 
 #System administration
 administration = System administration
@@ -192,8 +200,8 @@ nationalities = Nationalities
 languages = Languages
 professions = Professions
 rooms = Rooms
-log = Log
-importObjective = Import Objective
+log = Activity log
+importObjective = Import from SCLO
 
 ######################### - SP - #########################
 #AnamnesisCheckView
@@ -259,7 +267,7 @@ majorBtnLbl = Add primary skill
 minorBtnLbl = Add secondary skill
 mainClassi = Main classification
 classiTopic = Secondary classification
-topicLbl = Specific field
+topicLbl = Skills
 skillLevel = Skill level
 addSkill = Add skill
 
@@ -303,7 +311,7 @@ fileUploadSuccess=File uploaded successfully
 
 #RoleScript
 roleScript = Role scripts
-selectRoleTemplate = Select document scaffolding
+selectRoleTemplate = Select document components
 
 #MajorMinorPopup
 majorLbl = Major changes
@@ -323,17 +331,17 @@ confirmationMinorSkillAdded = Secondary skill successfully added!
 confirmationDeleteRole = Do you really want to delete this role?
 
 ####Topics & Specification
-roleTopic = Specific field
+roleTopic = Skill
 addDiscipline = Add discipline
-addRoleTopic = Add specific field
+addRoleTopic = Add skill
 studyYear = SY
 studyYears = Study year
 
 #TopicsAndSpecActivity
-warningAssignedRoleTopic = Discipline can not be deleted if it has an assigned specific field.
+warningAssignedRoleTopic = Discipline can not be deleted if it has an assigned skill.
 
 ####Role Template
-addRoleScriptTemplate = Add new scaffolding
+addRoleScriptTemplate = Add new component
 dateCreated = Date created
 dateEdited = Date edited
 addItem = Add item
@@ -451,7 +459,7 @@ warningScheduleNotPostponed = Schedule is not postponed!
 warningNoPreviousDay = No previous day!
 warningHeaderValue=Please Enter Valid Value For OSCE
 warningStartEndTime=Start time has to be before end time!
-warningGenerate=Please enter values for discipline and specific field!
+warningGenerate=Please enter values for discipline and skill!
 dataWarning = Date too late
 dataPastDateWarning = Date must not be in the past!
 splittingNotAllowWarning= Splitting is not allowed. Day end time must be greater than 13:00.
@@ -663,9 +671,9 @@ exportAllFilesProcessed = All files were processed
 exportWarningAlreadyExported = Selected files are already exported, Do you want to continue?
 
 # BellScheduleView
-bellSchedule = Bell Schedule
-bellScheduleUpload = Upload bell schedule
-bellScheduleExport = Export bell schedule
+bellSchedule = Schedule Alarms
+bellScheduleUpload = Upload alarm schedule
+bellScheduleExport = Export alarm schedule
 bellSchedPlusTime = +
 bellSchedMinusTime = -
 bellSchedAdjustTime = Adjust times
@@ -691,10 +699,10 @@ roleTemplateDeleteMessage = Role template successfully deleted!
 csvFileError = File not processed. student_id, name and prename are required fields!
 statisticsEvaluation = Statistical Evaluation
 statisticsEvaluationPlace = Statistical Evaluation place*
-createOsce=Create OSCE
-osceAssignments=OSCE Assignments
-assignmentsOutput=Assignments Output
-afterTheOsce=After the OSCE*
+createOsce=Create an OSCE
+osceAssignments=Assignments
+assignmentsOutput=OSCEManager Output
+afterTheOsce = Analysis
 
 osceLunchBreakRequiredFiled = Max. time until lunchbreak
 osceLongBreakRequiredFiled = Max. time until long break
@@ -746,7 +754,7 @@ exportSP = Export SPs
 copy=Copy
 
 discipline = Discipline
-topic= Specific field
+topic= Skill
 room = Room
 roomAlreadyAssignWantToExcahnge = Room is already assigned to a different station. Do you still want to assign this room?
 roleUsage=Past use of role
@@ -755,7 +763,7 @@ roleUsage=Past use of role
 exchange = Exchange**
 exchangeSpError = No SP has been selected!
 exchangeStudError = No student has been selected!
-StudentDetailsPlace = Student management
+StudentDetailsPlace = Student details
 anonymize = Anonymize
 
 startDate = Start date
@@ -781,7 +789,7 @@ studentLogicalBreak=Student break
 
 previousAssignmentWillLost=Previous assignment will be lost if any **
 alphabeticOrder = Alphabatically
-scrumbleOrder=Scrumble**
+scrumbleOrder=Scramble order
 item = item
 impression = impression
 resetToDefaultTemplate = Please reset to default template and try again!
